--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,7 @@ img.socialIcon {
 
 .wrapper {
   position: relative;
+  justify-content: center;
+  align-selfs: center;
   height: 72vh;
-  width: 70vh;
 }
