--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   overflow-x: hidden;
   padding: 0;
   width: 100%;
+  background-color: black;
 }
 
 div#main {
@@ -62,15 +63,15 @@ section.padding {
 }
 
 section img.background {
-  height: 100%;
+  /* height: 100%; */
   /* left: 50%; */
   object-fit: cover;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
+  /* pointer-events: none; */
+  /* position: absolute; */
+  /* top: 0; */
   /* transform: translate(-50%, 0); */
-  width: 100vmax;
-  z-index: -1;
+  width: 100%;
+  /* z-index: -1; */
 }
 
 h1 {
