--- a/src/index.css
+++ b/src/index.css
@@ -225,107 +225,78 @@ img.socialIcon {
 }
 
 /* Language Toggle */
-.switch {
+
+.toggle-switch {
   position: relative;
+  width: 75px;
   display: inline-block;
-  margin: 0 5px;
+  vertical-align: middle;
+  text-align: left;
 }
 
-.switch > span {
-  position: absolute;
-  top: 14px;
-  pointer-events: none;
-  font-family: "Helvetica", Arial, sans-serif;
-  font-weight: bold;
-  font-size: 12px;
-  text-transform: uppercase;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
-  width: 50%;
-  text-align: center;
+.toggle-switch-checkbox {
+  display: none;
 }
 
-input.check-toggle-round-flat:checked ~ .off {
-  color: #f36f25;
-}
-
-input.check-toggle-round-flat:checked ~ .on {
-  color: #fff;
-}
-
-.switch > span.on {
-  left: 0;
-  padding-left: 2px;
-  color: #f36f25;
-}
-
-.switch > span.off {
-  right: 0;
-  padding-right: 4px;
-  color: #fff;
-}
-
-.check-toggle {
-  position: absolute;
-  margin-left: -9999px;
-  visibility: hidden;
-}
-.check-toggle + label {
+.toggle-switch-label {
   display: block;
-  position: relative;
+  overflow: hidden;
   cursor: pointer;
-  outline: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  border-radius: 20px;
 }
 
-input.check-toggle-round-flat + label {
-  padding: 2px;
-  width: 97px;
-  height: 35px;
-  background-color: #f36f25;
-  -webkit-border-radius: 60px;
-  -moz-border-radius: 60px;
-  -ms-border-radius: 60px;
-  -o-border-radius: 60px;
-  border-radius: 60px;
-}
-input.check-toggle-round-flat + label:before,
-input.check-toggle-round-flat + label:after {
+.toggle-switch-inner {
   display: block;
-  position: absolute;
-  content: "";
-}
-
-input.check-toggle-round-flat + label:before {
-  top: 2px;
-  left: 2px;
-  bottom: 2px;
-  right: 2px;
-  background-color: #f36f25;
-  -webkit--moz-border-radius: 60px;
-  -ms-border-radius: 60px;
-  -o-border-radius: 60px;
-  border-radius: 60px;
-}
-input.check-toggle-round-flat + label:after {
-  top: 4px;
-  left: 4px;
-  bottom: 4px;
-  width: 48px;
-  background-color: #fff;
-  -webkit-border-radius: 52px;
-  -moz-border-radius: 52px;
-  -ms-border-radius: 52px;
-  -o-border-radius: 52px;
-  border-radius: 52px;
-  -webkit-transition: margin 0.2s;
-  -moz-transition: margin 0.2s;
-  -o-transition: margin 0.2s;
+  width: 200%;
+  margin-left: -100%;
   transition: margin 0.2s;
 }
 
-input.check-toggle-round-flat:checked + label:after {
-  margin-left: 44px;
+.toggle-switch-inner:before,
+.toggle-switch-inner:after {
+  display: block;
+  float: left;
+  width: 50%;
+  height: 34px;
+  line-height: 34px;
+  font-size: 14px;
+  color: #78c5ef;
+  font-weight: bold;
+  box-sizing: border-box;
+}
+
+.toggle-switch-inner:before {
+  content: "KR";
+  padding-left: 10px;
+  background-color: #78c5ef;
+  color: #fff;
+}
+
+.toggle-switch-inner:after {
+  content: "EN";
+  padding-right: 10px;
+  background-color: #78c5ef;
+  color: #fff;
+  text-align: right;
+}
+
+.toggle-switch-switch {
+  display: block;
+  width: 24px;
+  margin: 5px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 40px;
+  border-radius: 20px;
+  transition: margin 0.2s;
+}
+
+.toggle-switch-checkbox:checked + .toggle-switch-label .toggle-switch-inner {
+  margin-left: 0;
+}
+
+.toggle-switch-checkbox:checked + .toggle-switch-label .toggle-switch-switch {
+  right: 0px;
 }
